--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,23 @@
   },
   "homepage": "https://github.com/rahilrashid19/React#readme",
   "devDependencies": {
-    "@babel/core": "^7.22.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.9.3",
     "postcss": "^8.4.27",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "jsdom": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
